plugins {
    // 'net.fabricmc.fabric-loom' is the no-remap variant (1.16+), suited for
    // MC 26.x which ships deobfuscated jars. The legacy 'fabric-loom' id still
    // requires a mappings dependency.
    id 'net.fabricmc.fabric-loom' version '1.16.2'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    // No mappings declaration — the no-remap plugin variant doesn't create a
    // 'mappings' configuration since 26.x jars are already deobfuscated.
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
    inputs.property "version", project.version
    inputs.property "clientVersion", project.client_version
    inputs.property "adminVersion", project.admin_version
    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
    filesMatching("almin-client-version.txt") {
        expand "client_version": project.client_version
    }
    filesMatching("almin-admin-version.txt") {
        expand "admin_version": project.admin_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

// ---- server / client distributions -------------------------------------------
//
// One codebase, three published jars. The universal `jar` above still builds and
// runs on both sides; releases ship a server, a lightweight player client, and
// an optional admin-client extension.
//
//  * server jar - everything except the `client` package (verified: no
//    server-side class references it), main entrypoint, mixins applied.
//  * client jar - dashboard, mod/file downloads, profile reporting and updater.
//  * admin jar  - optional server-management screens; depends on the base jar.
//
// Each variant gets its own fabric.mod.json, generated below.

def modJsonFor(String declaredVersion, String env, String entrypointsJson, String mixinsJson,
               String description = 'Server administration, client mod distribution, activity tools and self-update.') {
    return """{
  "schemaVersion": 1,
  "id": "almin",
  "version": "${declaredVersion}",
  "name": "Almin",
  "description": "${description}",
  "authors": ["schecks"],
  "license": "ARR",
  "contact": {
    "homepage": "https://github.com/TheMin3s/almin",
    "sources": "https://github.com/TheMin3s/almin",
    "issues": "https://github.com/TheMin3s/almin/issues"
  },
  "environment": "${env}",
  "entrypoints": ${entrypointsJson},
  ${mixinsJson}"depends": {
    "fabricloader": ">=0.16.0",
    "minecraft": "~26.2",
    "java": ">=25",
    "fabric-api": "*"
  }
}
"""
}

def serverModJson = tasks.register('serverModJson') {
    def out = layout.buildDirectory.file('dist/server/fabric.mod.json')
    // Declare the version as an input, or Gradle sees only an existing output
    // and skips the task after a version bump — publishing a jar whose
    // fabric.mod.json still claims the previous version.
    inputs.property('version', project.version)
    outputs.file(out)
    doLast {
        def f = out.get().asFile
        f.parentFile.mkdirs()
        f.text = modJsonFor(project.version.toString(), 'server',
            '{\n    "main": ["com.schecks.almin.Almin"]\n  }',
            '"mixins": [\n    "almin.mixins.json"\n  ],\n  ')
    }
}

def clientModJson = tasks.register('clientModJson') {
    def out = layout.buildDirectory.file('dist/client/fabric.mod.json')
    inputs.property('version', project.client_version)
    outputs.file(out)
    doLast {
        def f = out.get().asFile
        f.parentFile.mkdirs()
        // No mixins: every mixin in this mod targets a server class.
        f.text = modJsonFor(project.client_version.toString(), 'client',
            '{\n    "client": ["com.schecks.almin.client.AlminClient"]\n  }',
            '',
            'Player-facing Almin client for mod downloads, server mod reporting, shared files and self-update.')
    }
}

def adminModJson = tasks.register('adminModJson') {
    def out = layout.buildDirectory.file('dist/admin/fabric.mod.json')
    inputs.property('version', project.admin_version)
    inputs.property('baseVersion', project.admin_base_version)
    outputs.file(out)
    doLast {
        def f = out.get().asFile
        f.parentFile.mkdirs()
        f.text = """{
  "schemaVersion": 1,
  "id": "almin_admin",
  "version": "${project.admin_version}",
  "name": "Almin Admin Suite",
  "description": "Optional in-game server administration screens for Almin.",
  "authors": ["schecks"],
  "license": "ARR",
  "contact": {
    "homepage": "https://github.com/TheMin3s/almin",
    "sources": "https://github.com/TheMin3s/almin",
    "issues": "https://github.com/TheMin3s/almin/issues"
  },
  "environment": "client",
  "entrypoints": {
    "client": ["com.schecks.almin.client.AlminAdminClient"]
  },
  "depends": {
    "almin": ">=${project.admin_base_version}",
    "fabricloader": ">=0.16.0",
    "minecraft": "~26.2",
    "java": ">=25",
    "fabric-api": "*"
  }
}
"""
    }
}

def serverJar = tasks.register('serverJar', Jar) {
    dependsOn serverModJson
    archiveClassifier = 'server'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    // The generated manifest wins over the one in processResources output.
    from(serverModJson)
    from(sourceSets.main.output) {
        exclude 'fabric.mod.json'
        exclude 'com/schecks/almin/client/**'
    }
    from('LICENSE') { rename { "${it}_almin" } }
}

def clientJar = tasks.register('clientJar', Jar) {
    dependsOn clientModJson
    archiveClassifier = 'client'
    archiveVersion = project.client_version
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from(clientModJson)
    from(sourceSets.main.output) {
        include(
            'com/schecks/almin/AlminPayloads*.class',
            'com/schecks/almin/UpdateChecker*.class',
            'com/schecks/almin/ServerVersionPayload*.class',
            'com/schecks/almin/AdminInstallPayload*.class',
            'com/schecks/almin/DashboardPayload*.class',
            'com/schecks/almin/ModOfferPayload*.class',
            'com/schecks/almin/ModFilePayload*.class',
            'com/schecks/almin/ModFileRequestPayload*.class',
            'com/schecks/almin/ModResponsePayload*.class',
            'com/schecks/almin/ClientProfilePayload*.class',
            'com/schecks/almin/FileTransferPayload*.class',
            'com/schecks/almin/client/AlminClient*.class',
            'com/schecks/almin/client/AlminNav*.class',
            'com/schecks/almin/client/ClientConfig*.class',
            'com/schecks/almin/client/ClientModInstaller*.class',
            'com/schecks/almin/client/ClientProfileReport*.class',
            'com/schecks/almin/client/ClientUpdater*.class',
            'com/schecks/almin/client/DashboardScreen*.class',
            'com/schecks/almin/client/FileDownloadHandler*.class',
            'com/schecks/almin/client/ModOfferResultScreen*.class',
            'com/schecks/almin/client/ModOfferScreen*.class',
            'com/schecks/almin/client/ServerOutdatedScreen*.class',
            'com/schecks/almin/client/Text*.class',
            'com/schecks/almin/client/UpdateAppliedScreen*.class',
            'com/schecks/almin/client/UpdateRefuseConfirmScreen*.class'
        )
    }
    from('LICENSE') { rename { "${it}_almin" } }
}

def adminJar = tasks.register('adminJar', Jar) {
    dependsOn adminModJson
    archiveClassifier = 'admin'
    archiveVersion = project.admin_version
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from(adminModJson)
    from(sourceSets.main.output) {
        include(
            'com/schecks/almin/AdminPayloads*.class',
            'com/schecks/almin/AdminVersionPayload*.class',
            'com/schecks/almin/DirListingPayload*.class',
            'com/schecks/almin/ConsoleOpenPayload*.class',
            'com/schecks/almin/WebAdminPayload*.class',
            'com/schecks/almin/NanoOpenPayload*.class',
            'com/schecks/almin/ConsoleLinesPayload*.class',
            'com/schecks/almin/ActivityPayload*.class',
            'com/schecks/almin/PanelPayload*.class',
            'com/schecks/almin/DirRequestPayload*.class',
            'com/schecks/almin/ConsoleSubscribePayload*.class',
            'com/schecks/almin/WebAdminRequestPayload*.class',
            'com/schecks/almin/WebPasswordPayload*.class',
            'com/schecks/almin/WebControlPayload*.class',
            'com/schecks/almin/ActivityRequestPayload*.class',
            'com/schecks/almin/NanoSavePayload*.class',
            'com/schecks/almin/FileUploadPayload*.class',
            'com/schecks/almin/ActivityEntry.class',
            'com/schecks/almin/ActivityAdminPolicy.class',
            'com/schecks/almin/PlayerTrackPoint.class',
            'com/schecks/almin/client/AlminAdminClient*.class',
            'com/schecks/almin/client/ActivityScreen*.class',
            'com/schecks/almin/client/ConsoleScreen*.class',
            'com/schecks/almin/client/DirBrowserScreen*.class',
            'com/schecks/almin/client/EntryContextScreen*.class',
            'com/schecks/almin/client/NanoEditorScreen*.class',
            'com/schecks/almin/client/PanelScreen*.class',
            'com/schecks/almin/client/RenameFileScreen*.class',
            'com/schecks/almin/client/WebPanelScreen*.class'
        )
    }
    from('LICENSE') { rename { "${it}_almin_admin" } }
}

tasks.named('build') {
    dependsOn serverJar, clientJar, adminJar
}
